[gd_scene load_steps=2 format=2]

[ext_resource path="res://NetTest.gd" type="Script" id=1]

[node name="NetTest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ServerInitButton" type="Button" parent="."]
margin_left = 19.0
margin_top = 10.0
margin_right = 308.0
margin_bottom = 71.0
text = "ServerInit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClientInitButton" type="Button" parent="."]
margin_left = 23.0
margin_top = 90.0
margin_right = 312.0
margin_bottom = 151.0
text = "ClientInit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectButton" type="Button" parent="."]
visible = false
margin_left = 23.0
margin_top = 179.0
margin_right = 312.0
margin_bottom = 240.0
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerTypeLabel" type="Label" parent="."]
margin_left = 361.0
margin_top = 17.0
margin_right = 445.0
margin_bottom = 31.0
text = "ServerType: ?"

[node name="PeerIdLabel" type="Label" parent="."]
margin_left = 362.0
margin_top = 79.0
margin_right = 446.0
margin_bottom = 93.0
text = "id: ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectedPeers" type="Label" parent="."]
margin_left = 367.0
margin_top = 50.0
margin_right = 419.0
margin_bottom = 64.0
text = "Peers: []"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClientConnectTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="ServerInitButton" to="." method="_on_ServerInitButton_pressed"]
[connection signal="pressed" from="ClientInitButton" to="." method="_on_ClientInitButton_pressed"]
[connection signal="pressed" from="DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="timeout" from="ClientConnectTimer" to="." method="_on_ClientConnectTimer_timeout"]
